# CMakeList.txt : CMake project for Analysis of SSE Intrinsiscs, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Analysis of SSE Intrinsiscs.cpp" "Analysis of SSE Intrinsiscs.h" "Fourier Transform/FourierTransform.cpp" "Fourier Transform/FourierTransform.h" )

# TODO: Add tests and install targets if needed.
